# opencv_examples

./: Cargo.toml  ReadMe.md  out.avi
custom-wrapper/: Cargo.toml
custom-wrapper/src/: lib.rs
examples/00_blur/: blur.py
examples/00_gausian/: gausian.py
examples/01_info/: README.md  info.py  main.rs
src/: back_projection.rs  canny.rs  copy_to.rs  event.rs  extract_mask.rs  histogram_eq.rs  histogram_normalize.rs  info.rs  mask_hsv.rs  opencv_info.rs  range.rs  saturate.rs  video_writer.rs
