[package]
name = "opencv_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.63", features = ["highgui", "imgcodecs", "videoio"]}

[[bin]]
name = "saturate"
path = "src/saturate.rs"

[[bin]]
name = "info"
path = "src/info.rs"

[[bin]]
name = "mask_hsv"
path = "src/mask_hsv.rs"

[[bin]]
name = "range"
path = "src/range.rs"

[[bin]]
name = "copy_to"
path = "src/copy_to.rs"

[[bin]]
name = "histogram_eq"
path = "src/histogram_eq.rs"

[[bin]]
name = "histogram_normalize"
path = "src/histogram_normalize.rs"

[[bin]]
name = "extract_mask"
path = "src/extract_mask.rs"

[[bin]]
name = "canny"
path = "src/canny.rs"

[[bin]]
name = "video_writer"
path = "src/video_writer.rs"

[[bin]]
name = "event"
path = "src/event.rs"
